--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
-p {
-	color: red;
+ul {
+	width: 400px;
+	margin: 0 auto;
+	background: #666;
+	list-style-type: none;
+	padding: 0;
+	overflow: none;
 }
