added comments for navigation

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,5 @@
+/*----------------------NAVIGATION-------------------------*/
+
 ul {
 	width: 400px;
 	margin: 0 auto;
@@ -27,3 +29,5 @@ a:hover {
 	color: #C60;
 	background: #003366;
 }
+
+/*----------------------END NAVIGATION-------------------------*/
