--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 #navigation a:link,a:visited{
 	display: block;
 	width: 120px;
-	font-weight: bold;
+	font-family: 'Racing Sans One', cursive;
 	color: #FFFFFF;
 	background-color: #F60;
 	text-align: center;
@@ -32,7 +32,7 @@
 .logo{
 	display: block;
 	width: 120px;
-	height: 27px;
+	height: 29px;
 	background-color: #F60;
 	text-align: center;
 }
