--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 	margin: 0 auto;
 	padding: 0;
 	overflow: hidden;
-	width: 700px;
+	width: 632px;
 	height: 30px;
 	-moz-border-radius: 20px;
     -webkit-border-radius: 20px;
@@ -52,11 +52,27 @@ body{
 	line-height: 1;
 	background: url(../images/blue-bg.jpg);
 }
+
 p{
 	font: helvetica;
 	color: #FFF;
 	font-size: 14px;
 }
+
+h1{
+	font-family: 'Racing Sans One', cursive;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	text-align: center;
+}
+
+h2{
+	font-family: 'Racing Sans One', cursive;
+	color: #FFFFFF;
+	text-transform: uppercase;
+	text-align: center;
+}
+	
 /*----------------------START GALLERY--------------------------*/
 
 #gallery ul{
