--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ h1{
 	text-transform: uppercase;
 	text-align: center;
 	text-shadow: 2px 4px 3px rgba(0,0,0,0.3);
+	font-size: 2em;
 }
 
 h2{
@@ -84,6 +85,7 @@ h2{
 	color: #FFFFFF;
 	text-transform: uppercase;
 	text-align: left;
+	font-size: 1.5em;
 }
 
 
