--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@
 	width: 150px;
 	height: 30px;
 	font-family: 'Racing Sans One', cursive;
+	font-size: 1em;
 	text-align: center;
 	text-decoration:none;
 	color: #ffffff;
