--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,16 @@
 /*----------------------NAVIGATION-------------------------*/
-#header{
-	width: 782px;
-}
-
-#navigation ul{
-	display:block;
-	width: 782px;
-	height: 30px;
-	clear: both;
-	text-align: center;
-
+#navigation{
+	width: 940px;
+	margin: 0 auto;
 }
 
 #navigation li{
 	list-style-type: none;
 	display: block;
-	width:1840px;
-	height: 30px;
-	
-
+	width:180px;
+	height: 25px;
+	text-align: center;
+	float: left;
 }
 
 #navigation a:link,a:visited{
@@ -94,7 +86,7 @@ h2{
 
 .fullpage{
 	float: left;
-	width: 782 px;
+	width: 900 px;
 	margin: 0 auto;
 	overflow: hidden;
 }
