--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 	list-style-type: none;
 	display: block;
 	width:180px;
-	height: 25px;
+	height: 30px;
 	text-align: center;
 	float: left;
 }
@@ -16,6 +16,7 @@
 #navigation a:link,a:visited{
 	list-style-type:none;
 	display:block;
+	height: 30px;
 	font-family: 'Racing Sans One', cursive;
 	font-size: 1em;
 	text-align: center;
@@ -55,7 +56,7 @@ body {
 	margin:0 auto;
 	padding:0;
 	border:0;
-	max-width: 100%;
+	width: 940px;
 	background:#fff;
 	font-size:100%;
 }
@@ -84,17 +85,17 @@ h2{
 }
 
 
-.fullpage{
+/*.fullpage{
 	float: left;
-	width: 900 px;
+	width: 100%;
 	margin: 0 auto;
 	overflow: hidden;
-}
+}*/
 
-.col1{
+#fullpage{
 	margin-left: auto;
 	margin-right: auto;
-	width: 49%;
+	width: 980px;
 	padding: 40px;
 	background: url(../images/blue-bg.jpg);
 }
