--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,9 @@
 /*----------------------NAVIGATION-------------------------*/
 #navigation{
-	width: 940px;
-	margin: 0 auto;
+	width: 100%;
+	margin: auto -16px;
+	text-align: center;
+	float: left;
 }
 
 #navigation li{
@@ -9,7 +11,6 @@
 	display: block;
 	width:180px;
 	height: 30px;
-	text-align: center;
 	float: left;
 }
 
@@ -53,12 +54,7 @@
 /*----------------------START BODY-------------------------*/
 
 body {
-	margin:0 auto;
-	padding:0;
-	border:0;
-	width: 940px;
-	background:#fff;
-	font-size:100%;
+	max-width: 940px;
 }
 
 p{
@@ -85,18 +81,9 @@ h2{
 }
 
 
-/*.fullpage{
-	float: left;
-	width: 100%;
-	margin: 0 auto;
-	overflow: hidden;
-}*/
-
 #fullpage{
-	margin-left: auto;
-	margin-right: auto;
-	width: 980px;
-	padding: 40px;
+	margin: auto 0;
+	padding: 20px;
 	background: url(../images/blue-bg.jpg);
 }
 
