--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,17 @@
 /*----------------------NAVIGATION-------------------------*/
 #navigation{
-	width: 100%;
-	margin: auto -16px;
-	text-align: center;
-	float: left;
+	width:1000px;
+	margin: 0 -40px;
 }
-
 #navigation li{
 	list-style-type: none;
-	display: block;
-	width:180px;
-	height: 30px;
 	float: left;
 }
 
 #navigation a:link,a:visited{
 	list-style-type:none;
 	display:block;
+	width: 188px;
 	height: 30px;
 	font-family: 'Racing Sans One', cursive;
 	font-size: 1em;
@@ -36,17 +31,19 @@
 	background: -webkit-gradient(linear, left top, left bottom, from(#f88e11), to(#f06015));
 	background: -moz-linear-gradient(top, #f88e11, #f06015);
 	filter: 		progid:DXImageTransform.Microsoft.gradient(startColorstr='#f88e11', endColorstr='#f06015');
+	
 }
 
 .logo{
 	list-style-type:none;
 	display: block;
-	width: 180px;
+	width: 188px;
 	height: 30px;
 	background: -webkit-gradient(linear, left top, left bottom, from(#faa51a), to(#f47a20));
 	background: -moz-linear-gradient(top, #faa51a, #f47a20);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#faa51a', endColorstr='#f47a20');
 	text-align: center;
+	
 }
 
 /*----------------------END NAVIGATION-------------------------*/
@@ -54,7 +51,9 @@
 /*----------------------START BODY-------------------------*/
 
 body {
-	max-width: 940px;
+	width: 900px;
+	clear: both;
+	margin:0 auto;
 }
 
 p{
@@ -82,27 +81,20 @@ h2{
 
 
 #fullpage{
-	margin: auto 0;
 	padding: 20px;
+	width: 900px;
 	background: url(../images/blue-bg.jpg);
+	clear: both;
 }
 
-#wrapper{
-	width: 782px;
-	margin: 0 auto;
-	overflow: hidden;
-}
+
 
 #stats{
-    width: 400px;
+    width: 450px;
     float: right;
-	margin-top: -315px;
     }
 
 
-
-
-	
 #bottom{
 	columns:200px 3;
 	-webkit-columns:200px 3;
@@ -116,9 +108,21 @@ h2{
 
 /*----------------------START GALLERY--------------------------*/
 
+#wrapper{
+	width: 700px;
+	margin: 0 auto;
+	overflow: hidden;
+	clear: both;
+}
+
+#gallery{
+	float: left;
+	clear:both;
+	width: 300px;
+}
+
 #gallery ul{
 	list-style-type: none;
-	width: 352px;
 	overflow: hidden;
 	padding: 3px;
 	margin-top: -10px;
@@ -160,11 +164,10 @@ h2{
 	clear: both;
 	background-color:  #f60;
 	margin: 0 auto;
-	padding: 0;
 	font-family: 'Racing Sans One', cursive;
 	text-align:center;
 	color: #FFFFFF;
-	width: 782px;
+	width: 940px;
 	height: 30px;
 	overflow: hidden;
 	-moz-border-radius: 20px;
