--- a/css/main.css
+++ b/css/main.css
@@ -50,15 +50,15 @@
 
 /*----------------------START BODY-------------------------*/
 
-body {
+body{
 	width: 900px;
-	clear: both;
 	margin:0 auto;
+	clear: both;
 }
 
 p{
-	font: helvetica;
-	color: #FFF;
+	font: 'Helvetica Neue';
+	color: #FFFFFF;
 	font-size: 0.875em;
 }
 
@@ -90,16 +90,17 @@ h2{
 
 
 #stats{
-    width: 450px;
+    width: 400px;
     float: right;
     }
 
 
 #bottom{
-	columns:200px 3;
-	-webkit-columns:200px 3;
-	-moz-columns: 200px 3;
+	columns:300px 3;
+	-webkit-columns:300px 3;
+	-moz-columns: 300px 3;
 	margin-top: 40px;
+	clear: both;
 
 } 
 
@@ -109,7 +110,7 @@ h2{
 /*----------------------START GALLERY--------------------------*/
 
 #wrapper{
-	width: 700px;
+	width: 800px;
 	margin: 0 auto;
 	overflow: hidden;
 	clear: both;
