--- a/css/main.css
+++ b/css/main.css
@@ -191,6 +191,10 @@ h2{
 	-webkit-box-shadow: 0px 0px 8px #444;
 }
 
+#table{
+	float: left;
+}
+
 
 /*----------------------START FOOTER--------------------------*/
 
