--- a/css/main.css
+++ b/css/main.css
@@ -193,7 +193,10 @@ h2{
 
 table,td,th
 {
-border:1px solid white;
+background: #c9d0de; border: 1px solid #e1e1e1;
+	-moz-box-shadow: 0px 0px 8px #444;
+	-webkit-box-shadow: 0px 0px 8px #444;
+	margin: 10px 0 0 0;
 }
 table
 {
